--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -447,7 +447,7 @@
     "__4th step__ Once the total power consumption and operating time have been figured, multiply the 2 values together to calculate the total energy consumption. The __units__ for __energy consumption__ are usually measured in __watt-hours(Wh).__\n",
     "\n",
     "### During operation: \n",
-    "__For example__, let's say I have collected __data__ of __10__ robot arm in the same manufacture to see the average value of energy consumption _within_ __3 months over 8 hours__ of __operation__ _period._ With energy input to __80%.__\n",
+    "__For example__, let's say I have collected __data__ of __10__ robot arm in the same manufacture to see the average value of energy consumption _within_ __a week over 8 hours__ of __operation__ _period._ With energy input to __80%.__\n",
     "\n",
     "\n",
     "### Standard deviation\n",
@@ -469,38 +469,39 @@
     "__EC Table deviation:__\n",
     "\n",
     "<!-- Energy consumption table -->\n",
-    "| $$Robot Arm Model 1$$| $$m_s = 3500$$ |  |\n",
+    "| $$Robot Arm Model 1$$| $$m_s = 3.5kWh$$ |  |\n",
     "| -----| ------| ------|\n",
     "| $$x_s$$ | $$(x_s - m_s)$$ | $$(x_s - m_s)^2$$ |\n",
-    "| $$1500$$ | $$-2000$$ | $$4,000,000$$ |\n",
-    "| $$1700$$ | $$-1800$$ | $$3,240,000$$ |\n",
-    "| $$2000$$ | $$-1500$$ | $$2,250,000$$ |\n",
-    "| $$3000$$ | $$-500$$ | $$250,000$$ |\n",
-    "| $$3200$$ | $$-300$$ | $$90,000$$ |\n",
-    "| $$3600$$ | $$100$$ | $$10,000$$ |\n",
-    "| $$4500$$ | $$1000$$ | $$1,000,000$$ |\n",
-    "| $$4500$$ | $$1000$$ | $$1,000,000$$ |\n",
-    "| $$5000$$ | $$1500$$ | $$2,250,000$$ |\n",
-    "| $$6000$$ | $$2500$$ | $$36,000,000$$ |\n",
+    "| $$1.5$$ | $$-2$$ | $$4$$ |\n",
+    "| $$1.7$$ | $$-1.8$$ | $$3.24$$ |\n",
+    "| $$2$$ | $$-1.5$$ | $$2.25$$ |\n",
+    "| $$3$$ | $$-0.5$$ | $$0.25$$ |\n",
+    "| $$3.2$$ | $$-0.3$$ | $$0.09$$ |\n",
+    "| $$3.6$$ | $$0.1$$ | $$0.01$$ |\n",
+    "| $$4.5$$ | $$1$$ | $$1$$ |\n",
+    "| $$4.5$$ | $$1$$ | $$1$$ |\n",
+    "| $$5$$ | $$1.5$$ | $$2.25$$ |\n",
+    "| $$6$$ | $$2.5$$ | $$6.25$$ |\n",
     "\n",
     "\n",
     "Now I will _sum_ the __squared deviation:__\n",
     "\n",
     "$$ \\sigma_s = \\sqrt{ \\Sigma(x_s-m_s)^2 \\over n-1} \n",
-    "= \\sqrt{ 50,090,000 \\over 10-1} \n",
-    "\\approx 5,565,555W\n",
+    "= \\sqrt{ 20.34 \\over 10-1} \n",
+    "\\approx 2.26kWh\n",
     "$$\n",
     "\n",
-    "This means that the robot arm out of these __10__ _samples_ will __consume__ a total of:\n",
+    "So the standard deviation of __7-day period of 8 hours operation__ out of _these_ __10__ _samples_ will __consume__ a total of:\n",
     "\n",
-    "$$ 5 565, 555 kWh$$\n",
+    "$$ 2.26 kWh$$\n",
     "\n",
-    "__over an 8-hour operating period for 3 months.__ In this case it is __HIGH__, and it needs to be looked into.\n",
     "\n",
     "By calculating the __standard deviation__ of EC for the robot arm, I can:\n",
     "- __Identify inefficiencies__: If the standard deviation of energy consumption is __high__, it may __indicate__ that there are __inefficiencies__ in the robot arm's operation that are causing energy waste. This can help identify areas for improvement in the robot arm's programming or operation.\n",
     "- __Monitor performance__: Monitoring the EC over time can help track the performance of the robot arm and ensure that it is operating consistently and predictably.\n",
-    "- __Improve energy efficiency__: By identifying patterns in EC and making changes to the robot's operation, I can potentially reduce energy waste and improve overall energy efficiency."
+    "- __Improve energy efficiency__: By identifying patterns in EC and making changes to the robot's operation, I can potentially reduce energy waste and improve overall energy efficiency.\n",
+    "\n",
+    "Code expression:"
    ]
   },
   {
