--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -417,9 +417,7 @@
     "A __power rating__ of __1000W (1kWh)__ and is working for 2 hours with an efficiency of __80%__, the electricity consumption would be:\n",
     "$$ E = 1000W \\times 2 h \\times 0.8 = 1600 Wh = 1.6 kWh $$\n",
     "\n",
-    "__Note:__ this formula is a simple version, and the actual electricity consumption of a robotic arm during operation _may_ __vary depending__ on the specific design and operation of the arm.\n",
-    "\n",
-    "## Robot's battery span"
+    "__Note:__ this formula is a simple version, and the actual electricity consumption of a robotic arm during operation _may_ __vary depending__ on the specific design and operation of the arm."
    ]
   },
   {
@@ -495,13 +493,20 @@
     "\n",
     "$$ 2.26 kWh$$\n",
     "\n",
+    "To __calculate__ the sum of square, which _represents_ the __sum__ of the squared deviations from the __mean:__\n",
+    "$$ SS = \\sum_{i=1}^n(x_i - \\bar{x})^2 $$\n",
+    "\n",
+    "$$ s = \\sqrt{ 20.34 \\over 9}\n",
+    "$$\n",
+    "\n",
+    "$$ s = \\sqrt{2.26} $$\n",
+    "\n",
+    "$$ s = 1.5033296 $$\n",
     "\n",
     "By calculating the __standard deviation__ of EC for the robot arm, I can:\n",
     "- __Identify inefficiencies__: If the standard deviation of energy consumption is __high__, it may __indicate__ that there are __inefficiencies__ in the robot arm's operation that are causing energy waste. This can help identify areas for improvement in the robot arm's programming or operation.\n",
     "- __Monitor performance__: Monitoring the EC over time can help track the performance of the robot arm and ensure that it is operating consistently and predictably.\n",
-    "- __Improve energy efficiency__: By identifying patterns in EC and making changes to the robot's operation, I can potentially reduce energy waste and improve overall energy efficiency.\n",
-    "\n",
-    "Code expression:"
+    "- __Improve energy efficiency__: By identifying patterns in EC and making changes to the robot's operation, I can potentially reduce energy waste and improve overall energy efficiency."
    ]
   },
   {
